Rebrand: Changed branding to FilmujAuto.pl

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Profesjonalna produkcja wideo dla branży motoryzacyjnej. 7.5M wyświetleń z jednego dnia zdjęciowego.">
-    <title>Jakub Kubacki | Produkcja Wideo Motoryzacyjnego</title>
+    <title>FilmujAuto.pl | Produkcja Wideo Motoryzacyjnego</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -811,7 +811,7 @@
                         <polygon points="5 3 19 12 5 21 5 3" />
                     </svg>
                 </div>
-                <span>JAKUB KUBACKI</span>
+                <span>FILMUJAUTO.PL</span>
             </a>
             <ul class="nav-links">
                 <li><a href="#uslugi">Usługi</a></li>
@@ -1051,7 +1051,7 @@
                                 <polygon points="5 3 19 12 5 21 5 3" />
                             </svg>
                         </div>
-                        <span>JAKUB KUBACKI</span>
+                        <span>FILMUJAUTO.PL</span>
                     </a>
                     <p>Profesjonalna produkcja wideo dla branży motoryzacyjnej. Rolki, które
                         generują miliony
@@ -1117,7 +1117,7 @@
             </div>
 
             <div class="footer-bottom">
-                <p>© 2025 Jakub Kubacki. Wszelkie prawa zastrzeżone.</p>
+                <p>© 2025 FilmujAuto.pl. Wszelkie prawa zastrzeżone.</p>
             </div>
         </div>
     </footer>
