--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
                 <li><a href="#o-mnie">O mnie</a></li>
                 <li><a href="#faq">FAQ</a></li>
             </ul>
-            <a href="#kontakt" class="btn btn-primary" style="padding: 10px 24px;">Kontakt</a>
+            <div class="nav-actions">
+                <a href="tel:+48796766068" class="nav-phone">+48 796 766 068</a>
+                <a href="#kontakt" class="btn btn-primary" style="padding: 10px 24px;">Kontakt</a>
+            </div>
         </div>
     </nav>
 
