--- a/index.html
+++ b/index.html
@@ -57,58 +57,162 @@
             <!-- Animation Background Gradient only -->
         </div>
         <div class="container hero-content">
-            <div data-aos="fade-up" class="hero-text">
+            <div class="hero-text">
                 <div class="hero-badge">
                     <span class="dot"></span>
-                    Wolne terminy: Styczeń 2026
+                    Wolne 3 terminy na luty
                 </div>
                 <h1>Przestań Tracić Klientów <br><span>na Amatorskich Filmikach</span></h1>
-                <p>Profesjonalna produkcja video dla Twojego biznesu motoryzacyjnego.</p>
+                <p>Tworzę wideo, które zatrzymuje scroll i przyciąga wzrok do Twojej marki.</p>
                 <div class="hero-actions">
                     <a href="#kontakt" class="btn btn-primary">Umów rozmowę</a>
                     <a href="#portfolio" class="btn btn-secondary">Sprawdź nasze realizacje</a>
                 </div>
             </div>
 
-            <!-- Animated Phone Graphic -->
+            <!-- Animated Phone Graphic (TikTok Style) -->
             <div class="hero-visual" data-aos="fade-left" data-aos-delay="200">
-                <div class="phone-frame">
+
+                <!-- Floating Badges (Social Proof) -->
+                <div class="floating-badge badge-top">
+                    <div class="badge-icon">📈</div>
+                    <div class="badge-text">
+                        <span class="badge-title">+847%</span>
+                        <span class="badge-sub">Zasięgów</span>
+                    </div>
+                </div>
+
+                <div class="floating-badge badge-bottom">
+                    <div class="badge-icon fire-icon">🔥</div>
+                    <div class="badge-text">
+                        <span class="badge-title">Viral</span>
+                        <span class="badge-sub">Na czasie</span>
+                    </div>
+                </div>
+
+                <div class="phone-frame tiktok-mockup">
                     <div class="notch"></div>
-                    <img src="stats.webp" alt="Statystyki zasięgów" class="screen-img">
+                    <video class="screen-img" autoplay loop muted playsinline poster="bmw_detail.png"
+                        style="object-fit: cover; width: 100%; height: 100%;">
+                        <source src="bmw_m4_cs.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+
+                    <!-- TikTok UI Overlay -->
+                    <div class="tiktok-overlay">
+                        <div class="tiktok-stat">
+                            1.3M
+                            <span>Wyświetleń</span>
+                        </div>
+
+                        <div class="tiktok-icons">
+                            <!-- Heart -->
+                            <div class="icon-group">
+                                <svg width="32" height="32" viewBox="0 0 24 24" fill="white" stroke="white"
+                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <path
+                                        d="M19 14c1.49-1.28 3.6-2.34 4.14-4.82A4.2 4.2 0 0 0 22 2.76A4.3 4.3 0 0 0 16 2.76C14.15 4.3 12 7.23 12 7.23S9.85 4.3 8 2.76A4.3 4.3 0 0 0 2 2.76A4.2 4.2 0 0 0 3.86 9.18C4.4 11.66 6.51 12.72 8 14"
+                                        display="none" /> <!-- Standard Heart Path -->
+                                    <path
+                                        d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"
+                                        fill="white"></path>
+                                </svg>
+                                <span>84.2K</span>
+                            </div>
+                            <!-- Comment -->
+                            <div class="icon-group">
+                                <svg width="32" height="32" viewBox="0 0 24 24" fill="white" stroke="white"
+                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <path
+                                        d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"
+                                        fill="rgba(255,255,255,0.9)"></path>
+                                </svg>
+                                <span>2.1K</span>
+                            </div>
+                            <!-- Share -->
+                            <div class="icon-group">
+                                <svg width="32" height="32" viewBox="0 0 24 24" fill="white" stroke="white"
+                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <circle cx="18" cy="5" r="3" fill="white"></circle>
+                                    <circle cx="6" cy="12" r="3" fill="white"></circle>
+                                    <circle cx="18" cy="19" r="3" fill="white"></circle>
+                                    <line x1="8.59" y1="13.51" x2="15.42" y2="17.49"></line>
+                                    <line x1="15.41" y1="6.51" x2="8.59" y2="10.49"></line>
+                                </svg>
+                                <span>Share</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- PROBLEM / SOLUTION -->
+    <!-- TESTIMONIALS -->
+    <section id="opinie" class="section-padding testimonials">
+        <div class="container">
+            <div class="testimonials-grid">
+                <div class="testimonial-card" data-aos="fade-up" data-aos-delay="100">
+                    <div class="testimonial-icon">❝</div>
+                    <p class="testimonial-text">"Z Kubą nagrywaliśmy filmy o tematyce motoryzacyjnej. Powstawały dłuższe
+                        materiały, z których Kuba wyciągał najciekawsze fragmenty i tworzył rolki. Nie raz byłem
+                        zaskoczony, jak później <b style="color:var(--white); font-weight:600">te rolki wykręcały bardzo
+                            dużo wyświetleń.</b>"</p>
+                    <div class="testimonial-author">
+                        <span class="author-name">Piotr</span>
+                        <!-- <span class="author-role">Youtuber / Pasjonat</span> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="proces" class="section-padding pain-points">
+        <div class="video-bg">
+        </div>
+
         <div class="container">
             <div class="section-header" data-aos="fade-up">
-                <span class="section-tag">Dlaczego warto?</span>
-                <h2>Twoja marka jest niewidoczna w social media?</h2>
-                <p>W dzisiejszych czasach samo zdjęcie samochodu to za mało. Algorytmy kochają wideo, a Twoi klienci
-                    kupują oczami.</p>
+                <span class="section-tag pulse-tag"><span class="pulse-dot"></span>Zatrzymaj scrollowanie</span>
+                <h2 style="font-size: 3.5rem; line-height: 1.1;">Twoja marka<br><span
+                        style="color: var(--gray);">zostaje w tyle?</span></h2>
+                <p>W erze TikToka i Reelsów statyczne zdjęcie samochodu nie działa. Twoi klienci
+                    kupują oczami, a algorytmy kochają ruch.</p>
             </div>
+
             <div class="cards-grid">
+                <!-- Card 1 -->
                 <div class="problem-card" data-aos="fade-up" data-aos-delay="100">
-                    <div class="problem-icon">📉</div>
-                    <h3>Brak Zasięgów</h3>
-                    <p>Twoje posty giną w gąszczu treści? Statyczne zdjęcia rzadko stają się viralem. Wideo zatrzymuje
-                        "scrollowanie" i buduje zaangażowanie.</p>
+                    <div class="card-stat">10x <span class="stat-label">przewaga</span></div>
+                    <h3>Niewidzialność</h3>
+                    <p>Twoje posty giną w gąszczu treści? Algorytmy promują wideo <b>10x częściej</b> niż zdjęcia.</p>
+                    <a href="#kontakt" class="card-link">Zobacz rozwiązanie ➞</a>
                 </div>
+                <!-- Card 2 -->
                 <div class="problem-card" data-aos="fade-up" data-aos-delay="200">
-                    <div class="problem-icon">🥱</div>
-                    <h3>Nudna Prezentacja</h3>
-                    <p>Suche dane techniczne nie sprzedają emocji. Pokaż dźwięk wydechu, dynamikę jazdy i detale, które
-                        wyróżniają Twoje auta, w filmowej jakości.</p>
+                    <div class="card-stat">
+                        <1s <span class="stat-label">decyzja</span>
+                    </div>
+                    <h3>Nuda</h3>
+                    <p>Zdjęcie nie oddaje dźwięku silnika ani wrażeń z jazdy. Wideo angażuje wszystkie zmysły.</p>
+                    <a href="#portfolio" class="card-link">Dowiedz się więcej ➞</a>
                 </div>
+                <!-- Card 3 -->
                 <div class="problem-card" data-aos="fade-up" data-aos-delay="300">
-                    <div class="problem-icon">💰</div>
-                    <h3>Stracona Sprzedaż</h3>
-                    <p>Każdy dzień bez profesjonalnego wideo to stracony klient, który poszedł do konkurencji, bo ta
-                        <b>pokazała</b> się lepiej na TikToku czy Instagramie.
-                    </p>
+                    <div class="card-stat">∞ <span class="stat-label">stracone</span></div>
+                    <h3>Pusta Kasa</h3>
+                    <p>Każdy dzień bez profesjonalnego wideo to dzień, w którym konkurencja <b>przyciąga wzrok</b>
+                        zamiast Ciebie.</p>
+                    <a href="#kontakt" class="card-link">Napraw to teraz ➞</a>
                 </div>
+            </div>
+            <!-- CTA Section -->
+            <div class="process-cta" data-aos="fade-up" data-aos-delay="400"
+                style="text-align:center; margin-top: 60px;">
+                <a href="#portfolio" class="btn btn-primary">Zobacz przykładowe wideo</a>
+                <a href="#kontakt" class="btn btn-secondary">Umów bezpłatną konsultację</a>
+                <p style="margin-top: 20px; font-size: 0.9rem; color: var(--gray); opacity: 0.8;">🛡️ Bezpłatna analiza
+                    Twojej obecnej strategii social media</p>
             </div>
         </div>
     </section>
@@ -289,6 +393,8 @@
         </div>
     </section>
 
+
+
     <!-- FAQ -->
     <section id="faq" class="section-padding faq">
         <div class="container">
@@ -428,11 +534,49 @@
         });
 
         // Form submission (Basic alert for now)
-        document.querySelector('form').addEventListener('submit', (e) => {
-            e.preventDefault();
-            alert('Dziękuję za wiadomość! To jest wersja demonstracyjna strony.');
+        const contactForm = document.querySelector('form');
+        if (contactForm) {
+            contactForm.addEventListener('submit', (e) => {
+                e.preventDefault();
+                alert('Dziękuję za wiadomość! To jest wersja demonstracyjna strony.');
+            });
+        }
+    </script>
+
+    <!-- 
+    <script>
+        // Inicjalizacja ikon Lucide
+        lucide.createIcons();
+
+        // Efekt licznika przy scrollowaniu
+        const observerOptions = {
+            threshold: 0.1,
+            rootMargin: "0px"
+        };
+
+        const observerSection = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.style.opacity = "1";
+                    entry.target.style.transform = "translateY(0)";
+                    // Stop observing once animated
+                    observerSection.unobserve(entry.target);
+                }
+            });
+        }, observerOptions);
+
+        document.querySelectorAll('.group').forEach((el, index) => {
+            // Check if element is inside the new section to avoid conflicts
+            if (el.closest('#proces')) {
+                el.style.opacity = "0";
+                el.style.transform = "translateY(20px)";
+                // Reset transition to ensure specific delay
+                el.style.transition = `opacity 0.6s ease ${index * 0.1}s, transform 0.6s ease ${index * 0.1}s`;
+                observerSection.observe(el);
+            }
         });
     </script>
+    -->
 </body>
 
 </html>
