Update CTA text and portfolio heading, remove PDF promise

--- a/index.html
+++ b/index.html
@@ -186,7 +186,6 @@
                     <div class="card-stat">10x <span class="stat-label">przewaga</span></div>
                     <h3>Niewidzialność</h3>
                     <p>Twoje posty giną w gąszczu treści? Algorytmy promują wideo <b>10x częściej</b> niż zdjęcia.</p>
-                    <a href="#kontakt" class="card-link">Zobacz rozwiązanie ➞</a>
                 </div>
                 <!-- Card 2 -->
                 <div class="problem-card" data-aos="fade-up" data-aos-delay="200">
@@ -195,7 +194,6 @@
                     </div>
                     <h3>Nuda</h3>
                     <p>Zdjęcie nie oddaje dźwięku silnika ani wrażeń z jazdy. Wideo angażuje wszystkie zmysły.</p>
-                    <a href="#portfolio" class="card-link">Dowiedz się więcej ➞</a>
                 </div>
                 <!-- Card 3 -->
                 <div class="problem-card" data-aos="fade-up" data-aos-delay="300">
@@ -203,14 +201,13 @@
                     <h3>Pusta Kasa</h3>
                     <p>Każdy dzień bez profesjonalnego wideo to dzień, w którym konkurencja <b>przyciąga wzrok</b>
                         zamiast Ciebie.</p>
-                    <a href="#kontakt" class="card-link">Napraw to teraz ➞</a>
                 </div>
             </div>
             <!-- CTA Section -->
             <div class="process-cta" data-aos="fade-up" data-aos-delay="400"
                 style="text-align:center; margin-top: 60px;">
                 <a href="#portfolio" class="btn btn-primary">Zobacz przykładowe wideo</a>
-                <a href="#kontakt" class="btn btn-secondary">Umów bezpłatną konsultację</a>
+                <a href="#kontakt" class="btn btn-secondary">Umów konsultację</a>
                 <p style="margin-top: 20px; font-size: 0.9rem; color: var(--gray); opacity: 0.8;">🛡️ Bezpłatna analiza
                     Twojej obecnej strategii social media</p>
             </div>
@@ -222,7 +219,7 @@
         <div class="container">
             <div class="section-header" data-aos="fade-up">
                 <span class="section-tag">Portfolio</span>
-                <h2>Najlepsze Realizacje</h2>
+                <h2>Przykładowe Realizacje</h2>
             </div>
             <div class="cards-grid" style="grid-template-columns: repeat(3, 1fr);">
                 <!-- Clip 1 -->
@@ -468,9 +465,8 @@
                     </div>
                     <div class="checkbox-group">
                         <input type="checkbox" id="privacy">
-                        <label for="privacy">Zgadzam się na przetwarzanie moich danych osobowych w celu kontaktu.
-                            <br><small style="color:var(--orange)">Dostaniesz też darmowy PDF: "5 Typów Wideo
-                                Moto"</small></label>
+                        <label for="privacy">Zgadzam się na przetwarzanie moich danych osobowych w celu
+                            kontaktu.</label>
                     </div>
                     <button type="submit" class="btn btn-primary" style="width: 100%;">Wyślij Wiadomość</button>
                 </form>
