--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                     <ul class="price-features">
                         <li><svg viewBox="0 0 24 24">
                                 <path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z" />
-                            </svg> 1 dzień zdjęciowy (do 3h)</li>
+                            </svg> 1 dzień zdjęciowy (do 3h, Warszawa)</li>
                         <li><svg viewBox="0 0 24 24">
                                 <path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z" />
                             </svg> 4 rolki (Instagram/TikTok)</li>
@@ -306,6 +306,9 @@
                                 <path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z" />
                             </svg> Muzyka z licencji</li>
                     </ul>
+                    <p
+                        style="font-size: 0.85rem; color: var(--gray); font-style: italic; margin-top: -20px; margin-bottom: 20px;">
+                        *Dojazd poza Warszawę dodatkowo płatny</p>
                     <a href="#kontakt" class="btn btn-secondary" style="width:100%">Wybieram</a>
                 </div>
                 <!-- PRO -->
