--- a/index.html
+++ b/index.html
@@ -445,8 +445,8 @@
                 </div>
                 <form>
                     <div class="form-group">
-                        <label>Imię i Nazwisko</label>
-                        <input type="text" class="form-control" placeholder="Wpisz swoje imię">
+                        <label for="name">Imię</label>
+                        <input type="text" id="name" class="form-control" placeholder="Wpisz swoje imię">
                     </div>
                     <div class="form-group">
                         <label>Email</label>
